examples/test/testpolicy16555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16555
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key37: value38
      key16: value47
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value28
          key38: value26
          key45: value47
